hphp/hack/test/dot_php/hack-invalid-mode.php.exp
File "hack-invalid-mode.php", line 1, characters 1-35:
Incorrect comment; possible values include `strict`, `partial`, or empty (Parsing[1002])
