hphp/hack/test/dot_php/hack-invalid-mode.php
<?hh // foo

const int ANSWER = 42;
